app/assets/stylesheets/profile.css
.Profile {
	padding-block-end: 4rem;
}

.Profile-header {
	background: var(--color-blue-175);
}

.Profile-headerImage {
	block-size: 100%;
	inline-size: 100%;
	object-fit: cover;
}

.Profile-main {
	container: profile-main / inline-size;
}

@media (width < 84.5rem) {
	.Profile-header {
		aspect-ratio: 4;
	}
}

@media (width >= 84.5rem) {
	.Profile-header {
		aspect-ratio: initial;
		block-size: 19.625rem;
		max-inline-size: 94.5rem;
		margin-inline: auto;
	}

	.Profile-header:not(:has(img)) {
		block-size: 10rem;
	}
}

@media (width < 48rem) {
	.Profile-meta {
		margin-inline: calc(-1 * var(--page-spacing));

		.Sidebar-userName {
			background: var(--color-blue-125);
			margin: 0;
			padding-inline: var(--page-spacing);
			display: flex;
			gap: 0.75rem;
			align-items: center;
		}
	}

	.Profile-products {
		margin-block-start: 1.5rem;
	}
}

@media (width >= 48rem) {
	.Profile {
		--gap: clamp(2rem, 4vi, 4rem);
	}

	.Profile-content {
		display: flex;
		flex-wrap: wrap;
		align-items: start;
		gap: clamp(2rem, 4vi, 4rem);
		padding-block-start: var(--gap);
		scroll-margin-block-start: var(--header-height);
	}

	.Profile-meta {
		flex: 1;
		min-inline-size: 16rem;
		position: sticky;
		inset-block-start: 6rem;
		margin-block-start: calc(-1 * 16rem / 2 - var(--gap));
		outline: 0.5rem solid var(--color-bg-main);
		border-radius: var(--border-radius);
	}

	.Profile-products {
		flex: 4;
	}
}

.ProfilePossessions {
	list-style: "";
	margin: 0;
	padding: 0;
	container: list / inline-size;
}

.ProfilePossessions-item {
	padding-block-start: clamp(1rem, 5vi, 3rem);
}

.ProfilePossessions-item + .ProfilePossessions-item {
	border-block-start: var(--border) var(--color-transparency-15);
	margin-block-start: clamp(1rem, 5vi, 3rem);
}

.ProfilePossessions-header {
	display: flex;
	gap: 1rem;
	justify-content: space-between;
}

@container list (width < 32rem) {
	.ProfilePossessions-header {
		flex-direction: column;
	}
}

.ProfilePossessions h3 {
	margin-block: 0;
}

.ProfilePossessions-images {
	display: grid;
	grid-template-columns: repeat(auto-fill, minmax(min(100%, 6rem), 1fr));
	gap: 0.5rem;
	margin-block-start: 1rem;
}

.ProfilePossessions-images > :first-child {
	grid-column: 1 / 3;
	grid-row: 1 / 3;
}

.UserProfile {
	display: flex;
	gap: 3rem;
}

@container profile-main (width <= 42rem) {
	.UserProfile {
		flex-direction: column;
	}
}

@container profile-main (width > 42rem) {
	.UserProfile {
		flex-direction: row-reverse;
	}
	.UserProfile-content {
		flex: 2;
	}

	.UserProfile-feed {
		flex: 3;
	}
}

.UserProfile-heading {
	padding-block-end: 1rem;
	border-block-end: var(--border-light);
	margin-block-end: 2rem;
}

.UserProfile-statistics,
.UserProfile-events {
	margin-block-start: 2rem;
}

.UserProfile-collection {
	ol {
		list-style: "";
		margin: 0;
		padding: 0;
		display: grid;
		grid-template-columns: repeat(auto-fill, minmax(min(100%, 7rem), 1fr));
		gap: 0.5rem;

		li {
			padding: 0;
		}
	}
}

